# mulighetsrommet-api/src/main/kotlin/no/nav/mulighetsrommet/api/tilskuddbehandling/TilskuddBehandlingService.kt
@@ -2,11 +2,13 @@ package no.nav.mulighetsrommet.api.tilskuddbehandling
 
 import arrow.core.Either
 import arrow.core.left
+import arrow.core.nel
 import arrow.core.right
 import no.nav.mulighetsrommet.api.ApiDatabase
 import no.nav.mulighetsrommet.api.responses.FieldError
 import no.nav.mulighetsrommet.api.tilskuddbehandling.model.TilskuddBehandlingDto
 import no.nav.mulighetsrommet.api.tilskuddbehandling.model.TilskuddBehandlingRequest
+import no.nav.mulighetsrommet.api.tilskuddbehandling.model.TilskuddBehandlingStatus
 import no.nav.mulighetsrommet.api.totrinnskontroll.db.TotrinnskontrollDbo
 import no.nav.mulighetsrommet.api.totrinnskontroll.db.toDbo
 import no.nav.mulighetsrommet.api.totrinnskontroll.model.Besluttelse
@@ -61,10 +63,19 @@ class TilskuddBehandlingService(private val db: ApiDatabase) {
         val behandling = requireNotNull(queries.tilskuddBehandling.get(id)) {
             "TilskuddBehandling med id $id ble ikke funnet"
         }
-        val opprettelse = queries.totrinnskontroll.getOrError(id, Totrinnskontroll.Type.OPPRETT)
+        if (behandling.status.type !== TilskuddBehandlingStatus.TIL_GODKJENNING) {
+            return FieldError
+                .of("Tilskuddsbehandling kan ikke godkjennes fordi det har status ${behandling.status.type.beskrivelse}")
+                .nel()
+                .left()
+        }
 
+        val opprettelse = queries.totrinnskontroll.getOrError(id, Totrinnskontroll.Type.OPPRETT)
         if (navIdent == opprettelse.behandletAv) {
-            return@transaction listOf(FieldError.of("Du kan ikke beslutte en behandling du selv har opprettet")).left()
+            return FieldError
+                .of("Du kan ikke beslutte en tilskuddsbehandling du selv har opprettet")
+                .nel()
+                .left()
         }
 
         val godkjentOpprettelse = opprettelse.copy(
@@ -73,8 +84,9 @@ class TilskuddBehandlingService(private val db: ApiDatabase) {
             besluttelse = Besluttelse.GODKJENT,
         )
         queries.totrinnskontroll.upsert(godkjentOpprettelse.toDbo())
+        queries.tilskuddBehandling.setStatus(id, TilskuddBehandlingStatus.GODKJENT)
 
-        behandling.right()
+        queries.tilskuddBehandling.getOrError(id).right()
     }
 
     fun returner(
@@ -86,6 +98,13 @@ class TilskuddBehandlingService(private val db: ApiDatabase) {
         val behandling = requireNotNull(queries.tilskuddBehandling.get(id)) {
             "TilskuddBehandling med id $id ble ikke funnet"
         }
+        if (behandling.status.type !== TilskuddBehandlingStatus.TIL_GODKJENNING) {
+            return FieldError
+                .of("Tilskuddsbehandling kan ikke returneres fordi det har status ${behandling.status.type.beskrivelse}")
+                .nel()
+                .left()
+        }
+
         val opprettelse = queries.totrinnskontroll.getOrError(id, Totrinnskontroll.Type.OPPRETT)
 
         val avvistOpprettelse = opprettelse.copy(
@@ -96,8 +115,9 @@ class TilskuddBehandlingService(private val db: ApiDatabase) {
             forklaring = forklaring,
         )
         queries.totrinnskontroll.upsert(avvistOpprettelse.toDbo())
+        queries.tilskuddBehandling.setStatus(id, TilskuddBehandlingStatus.RETURNERT)
 
-        behandling.right()
+        queries.tilskuddBehandling.getOrError(id).right()
     }
 
     fun getByGjennomforingId(gjennomforingId: UUID): List<TilskuddBehandlingDto> {
