# mulighetsrommet-api/src/main/kotlin/no/nav/mulighetsrommet/api/tilskuddbehandling/db/TilskuddBehandlingQueries.kt
@@ -6,6 +6,7 @@ import kotliquery.Session
 import kotliquery.queryOf
 import no.nav.mulighetsrommet.api.tilskuddbehandling.model.TilskuddBehandlingDto
 import no.nav.mulighetsrommet.api.tilskuddbehandling.model.TilskuddBehandlingStatus
+import no.nav.mulighetsrommet.api.tilskuddbehandling.model.TilskuddBehandlingStatusDto
 import no.nav.mulighetsrommet.api.tilskuddbehandling.model.TilskuddVedtakDto
 import no.nav.mulighetsrommet.database.datatypes.periode
 import no.nav.mulighetsrommet.database.datatypes.toDaterange
@@ -90,6 +91,17 @@ class TilskuddBehandlingQueries(private val session: Session) {
         execute(queryOf(query, params))
     }
 
+    fun setStatus(id: UUID, status: TilskuddBehandlingStatus) {
+        @Language("PostgreSQL")
+        val query = """
+            update tilskudd_behandling
+            set status = :status
+            where id = :id::uuid
+        """.trimIndent()
+
+        session.execute(queryOf(query, mapOf("id" to id, "status" to status.name)))
+    }
+
     fun get(id: UUID): TilskuddBehandlingDto? {
         @Language("PostgreSQL")
         val query = """
@@ -98,6 +110,10 @@ class TilskuddBehandlingQueries(private val session: Session) {
         """.trimIndent()
 
         return session.single(queryOf(query, mapOf("id" to id))) { it.toTilskuddBehandlingDto() }
+    }
+
+    fun getOrError(id: UUID): TilskuddBehandlingDto {
+        return checkNotNull(get(id)) { "Tilskuddsbehadling med id $id finnes ikke" }
     }
 
     fun getByGjennomforingId(gjennomforingId: UUID): List<TilskuddBehandlingDto> {
@@ -119,5 +135,5 @@ private fun Row.toTilskuddBehandlingDto() = TilskuddBehandlingDto(
     periode = periode("periode"),
     kostnadssted = NavEnhetNummer(string("kostnadssted")),
     vedtak = Json.decodeFromString<List<TilskuddVedtakDto>>(string("vedtak_json")),
-    status = TilskuddBehandlingStatus.valueOf(string("status")),
+    status = TilskuddBehandlingStatusDto(TilskuddBehandlingStatus.valueOf(string("status"))),
 )
